# ats_common

./: Cargo.toml
ats_common/: Cargo.toml
ats_common/src/: lib.rs  ocv_types.rs
